--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-mark": "^0.0.4",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
